--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
+        "query-string": "^6.8.2",
         "react-router-dom": "^5.0.1"
     }
 }
